# AI-MARKET-PLACE

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AI MARKET PLACE WORKPLAN.docx  AI Model Marketplace & Inference Platform.docx
infrastructure/docker/: docker-compose.yml
infrastructure/docker/grafana/provisioning/datasources/: prometheus.yml
infrastructure/docker/init-scripts/mongodb/: 01-init.js
infrastructure/docker/init-scripts/postgres/: 01-init.sql
infrastructure/docker/prometheus/: prometheus.yml
shared/common/: __init__.py  database.py  logger.py
shared/schemas/: __init__.py  base.py
shared/utils/: __init__.py  helpers.py
